# DeepSynth-Eval

./: LICENSE  README.md  pyproject.toml
data/: example_gen_result.jsonl
deepsynth_eval/eval/: evaluate.py  prompts.py  schemas.py  score.py  utils.py
recipes/: eval_and_score.sh
