[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepSynth-Eval"
description = "DeepSynth-Eval Evaluation Framework"
requires-python = ">=3.9"
dependencies = [
    "loguru",
    "litellm<=1.80.11",
    "tqdm",
    "aiolimiter",
    "tenacity"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["deepsynth_eval"]
namespaces = false